fix jumpy rendering of virtual list - may need refactoring

--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -12,8 +12,6 @@
 }
 .container {
   position: relative;
-
-  background: #111;
 }
 
 .container::before {
